genere un nuevo token de acceso de tienda nube

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ID_TIENDA=5676879
-ACCESS_TOKEN=9e839ad691c01ff908903432e79ed3392d138638 
-USER_AGENT=Praga(valentin.lapalma25@gmail.com)
+ACCESS_TOKEN=7f1c9265408e91e6a47dcceedfc8e7914604bc48 
+# USER_AGENT=Praga(valentin.lapalma25@gmail.com)
 # ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
