--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
 ID_TIENDA=5676879
 ACCESS_TOKEN=7f1c9265408e91e6a47dcceedfc8e7914604bc48 
-# USER_AGENT=Praga(valentin.lapalma25@gmail.com)
-# ALLOWED_ORIGINS=http://localhost:5173,http://localhost:3000
+USER_AGENT=Pragabasics(valentin.lapalma25@gmail.com)
