--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ID_TIENDA=5676879
+ID_TIENDA=957224
 ACCESS_TOKEN=7f1c9265408e91e6a47dcceedfc8e7914604bc48 
 USER_AGENT=Pragabasics(valentin.lapalma25@gmail.com)
