--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-ID_TIENDA=5676879
-ACCESS_TOKEN=090978fda23f6c7b3788d2b6412e486a8d4eb0be 
-USER_AGENT=Pragabasics(valentin.lapalma25@gmail.com)
+ID_TIENDA=957224
+ACCESS_TOKEN=7ef4c30160a05ec971016bd6bfbf8e17617c5842 
+USER_AGENT=Pragabasics(rwoschnag@gmail.com)
