--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "firebase-admin": "^13.1.0",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0"
   }
 }
